[gd_scene load_steps=2 format=3 uid="uid://bp34up1b8kxrx"]

[ext_resource type="Script" path="res://multiplayer_template/menu/old_main_menu/server_info.gd" id="1_ymiyr"]

[node name="ServerInfo" type="HBoxContainer"]
script = ExtResource("1_ymiyr")

[node name="ServerName" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Ip" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="JoinServer" type="Button" parent="."]
layout_mode = 2
text = "  Join  "

[connection signal="pressed" from="JoinServer" to="." method="_on_join_server_pressed"]
